--- a/src/css/about.module.scss
+++ b/src/css/about.module.scss
@@ -40,7 +40,7 @@ h1{
     background-color: $color-bg-green !important;
   }
   border-bottom: 1px solid white;
-  border-top: 1px solid white;
+  //border-top: 1px solid white;
 
   .nav_items{
     @include buttonHoverEffect;
