--- a/src/css/top_about_us.module.scss
+++ b/src/css/top_about_us.module.scss
@@ -13,6 +13,7 @@ $top-get-in-touch-text-color: #383C47;
   font-weight: 500!important;
   font-style: italic;
   font-size: 3rem;
+  border-top: 1px solid white;
   border-bottom: 1px solid white;
   transition: background-image .5s ease-in-out;
 
