--- a/src/css/top_view_locations.module.scss
+++ b/src/css/top_view_locations.module.scss
@@ -12,7 +12,7 @@ $top-view-all-locations-height: 18rem;
   font-weight: 400!important;
   font-style: italic;
   font-size: 5rem;
-  border-bottom: 1px solid white;
+  //border-bottom: 1px solid white;
 
   max-width: 100%;
   position: relative;
@@ -39,7 +39,7 @@ $top-view-all-locations-height: 18rem;
   .btn{
     color:#262626;
     font-size:1em;
-    border-bottom: #fff 1px solid;
+    //border-bottom: #fff 1px solid;
     -webkit-text-fill-color:transparent;
     position:absolute;
     z-index: 100;
