add static view all locations

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,6 +2,7 @@
 @import "@fontsource/zen-kaku-gothic-new";
 $color-text: #383C47;
 $color-top-gray: #B3B3BE;
+$color-black: #383C47;
 
 html{
   font-size: calc(12px + 0.390625vw);
