fix the locations

--- a/src/css/share.module.scss
+++ b/src/css/share.module.scss
@@ -90,7 +90,7 @@ nav{
   flex-direction: row;
   justify-content: space-between;
   width: 87%;
-  margin-top: 10rem;
+  //margin-top: 10rem; // should be add back after the comments are back
 
   .previous_container{
 
