--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,6 +3,7 @@
 $color-text: #383C47;
 $color-top-gray: #B3B3BE;
 $color-black: #383C47;
+$FONT-EN: 'Poppins', 'Lato', 'Yeseva One', 'Noto Sans JP', sans-serif, cursive;
 
 html{
   font-size: calc(12px + 0.390625vw);
