--- a/src/css/contact_form.module.scss
+++ b/src/css/contact_form.module.scss
@@ -13,33 +13,41 @@ $contact-input-after-fill-color: rgb(97, 97, 97);
 //   padding: 1.8rem 0 !important;
 //   z-index: 10;
 // }
-a{
+a {
   text-decoration: none !important;
   margin: 0 0.8rem;
   letter-spacing: 0.1rem;
   color: $color-text;
   // @include buttonHoverEffect;
 }
-@keyframes fadein{
-  0% { opacity:0; }
-  30% { opacity:0;}
-  100% { opacity:1;}
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
-#contact{
+#contact {
   background-color: $contact-bg-color;
   color: $color-text;
   padding-top: 5rem;
+  width: 100vw;
 
-  .nav_items{
+  .nav_items {
     @include buttonHoverEffect;
   }
-  
-  .contact_container{
 
+  .contact_container {
+    width: 100%;
   }
 
-  .banner_container{
+  .banner_container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -47,7 +55,16 @@ a{
     width: 100%;
     // height: 200vh;
     padding: 1.5rem 0;
-    .banner_img{
+    @include sm() {
+    }
+    @include md() {
+
+    }
+    @include lg() {
+
+    }
+
+    .banner_img {
       object-fit: cover;
       position: relative;
       width: 10rem;
@@ -57,18 +74,41 @@ a{
     }
   }
 
-  .description_container{
+  .description_container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: flex-start;
+    padding-left: 7vw;
+    width: 80%;
+    @include sm() {
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+      padding-left: 0;
+    }
+    @include md() {
+      padding-left: 0;
+    }
+    @include lg() {
 
-    .description_left{
+    }
+
+    .description_left {
       display: flex;
       flex-direction: column;
-      width: 28.4rem;
-      margin: 0 5.5rem;
-      .description_left_paragraph{
+      width: 45%;
+      @include sm() {
+        width: 80%;
+      }
+      @include md() {
+
+      }
+      @include lg() {
+
+      }
+
+      .description_left_paragraph {
         font-family: 'Zen Kaku Gothic New', 'Poppins', 'Lato', 'Yeseva One', 'Noto Sans JP', sans-serif, cursive !important;
         font-weight: 400;
         display: flex;
@@ -81,88 +121,109 @@ a{
         margin: 1.5rem 0;
       }
     }
-    .description_right{
+
+    .description_right {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
       text-align: left;
-      margin: 0 5.5rem;
       padding: 3rem 0;
-      .description_sep_container{
+      width: 40%;
+      @include sm() {
+        width: 80%;
+      }
+      @include md() {
+        width: 40%;
+      }
+      @include lg() {
+        width: 40%;
+      }
+
+      .description_sep_container {
         display: flex;
         flex-direction: column;
         margin: 2rem 0;
         line-height: 1.8rem;
-        .description_right_title{
+
+        .description_right_title {
           display: flex;
           flex-direction: column;
           font-size: 0.8rem;
         }
-        .description_right_button_container{
+
+        .description_right_button_container {
           display: flex;
           flex-direction: row;
           justify-content: center;
           align-items: center;
         }
-        .arrow_right_short_prop{
+
+        .arrow_right_short_prop {
           width: 1.4rem;
           height: 0.7rem;
         }
-        .arrow_down_short_prop{
+
+        .arrow_down_short_prop {
           width: 0.7rem;
           height: 1.4rem;
         }
-        .description_right_url{
+
+        .description_right_url {
           display: flex !important;
           flex-direction: column !important;
           font-size: 1.2rem !important;
           color: $contact-input-color !important;
           text-decoration: underline !important;
-          &:hover{
+
+          &:hover {
             // cursor: pointer !important;
             color: rgb(97, 97, 97) !important;
             transition: all .3s ease-in-out !important;
           }
         }
-        .description_right_email{
+
+        .description_right_email {
           @extend .description_right_url;
           // margin: 0 0 !important;
           margin-left: 0 !important;
           margin-right: 1rem !important;
         }
-        .description_right_scroll_down{
+
+        .description_right_scroll_down {
           @extend .description_right_url;
           margin-left: 0 !important;
           margin-right: 1rem !important;
         }
-        
+
       }
     }
   }
 
-  #contactForm{
+  #contactForm {
     position: relative;
 
   }
-  .input_form_element_container{
+
+  .input_form_element_container {
     height: 10rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    ::placeholder{
+
+    ::placeholder {
       color: $contact-input-color;
     }
   }
 
-  .double_check_container{
+  .double_check_container {
     display: flex;
     flex-direction: row;
+    text-align: left;
   }
 
-  .double_check_prop{
-    // @extend .description_right_url;
+  .double_check_prop {
     display: flex !important;
     flex-direction: column !important;
     font-size: 2rem !important;
@@ -170,7 +231,16 @@ a{
     text-decoration: underline !important;
     margin-right: 1rem !important;
     margin-left: 0 !important;
-    &:hover{
+    width: 9.5rem;
+    @include md() {
+      width: 9.5rem;
+      text-align: left;
+    }
+    @include lg() {
+      width: unset;
+    }
+
+    &:hover {
       // cursor: pointer !important;
       color: rgb(97, 97, 97) !important;
       transition: all .3s ease-in-out !important;
@@ -178,22 +248,33 @@ a{
   }
 
 
-  form{
+  form {
     margin-top: 7rem;
   }
 
-  label{
+  label {
     font-size: 0.8rem;
   }
-  input[type=text], select{
+
+  input[type=text], select {
     width: 100%;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid gray;
     font-size: 3rem;
     color: $contact-input-after-fill-color;
+    @include sm() {
+      font-size: 2rem;
+    }
+    @include md() {
+      font-size: 2rem;
+    }
+    @include lg() {
+      font-size: 3rem;
+    }
   }
-  textarea{
+
+  textarea {
     border: 0;
     border-bottom: 1px solid gray;
     background-color: transparent;
@@ -201,5 +282,14 @@ a{
     width: 100%;
     // height: 4rem;
     color: $contact-input-after-fill-color;
+    @include sm() {
+      font-size: 2rem;
+    }
+    @include md() {
+      font-size: 2rem;
+    }
+    @include lg() {
+      font-size: 3rem;
+    }
   }
 }
