--- a/src/css/contact_thanks.module.scss
+++ b/src/css/contact_thanks.module.scss
@@ -53,7 +53,7 @@ a{
     justify-content: flex-start;
     align-items: flex-start;
     width: 50%;
-    margin-bottom: 8rem;
+    margin-bottom: 4rem;
 
     .contact_thanks_descriptions_sep_prop{
       font-size: 0.7rem;
@@ -64,6 +64,11 @@ a{
     }
   }
   .contact_thanks_img_area_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2.5rem;
 
     .contact_thanks_img_prop{
       object-fit: cover;
@@ -80,8 +85,41 @@ a{
         margin: 0 0.5rem;
       }
     }
+    .contact_thanks_img_download_button_container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 3rem;
+      height: 3rem;
+      border: 1px solid $color-black;
+      border-radius: 10rem;
+      &:hover{
+        cursor: pointer;
+      }
+      .contact_thanks_img_download_button_prop{
+        width: 1rem;
+        height: 1rem;
+      }
+    }
   }
 
+  .back_to_top_button_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10rem;
+    .back_to_top_button_title{
+      margin-right: 1rem;
+      font-family: $FONT-EN;
+      font-size: 2rem !important;
+      text-decoration: underline !important;
+      color: $contact-input-color !important;
+    }
+    .back_to_top_button_arrow{
+
+    }
+  }
 
   .dialogue_container{
     display: none;
