--- a/src/css/privacy_policy.module.scss
+++ b/src/css/privacy_policy.module.scss
@@ -64,6 +64,9 @@ $location-bg-color:#F1EEE6;
 
     Button{
       width: 30%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       &:hover{
         background-color: white;
         color: $color-black;
