add scroll function for mobile browser

--- a/src/css/contact_confirm.module.scss
+++ b/src/css/contact_confirm.module.scss
@@ -100,6 +100,7 @@ a{
         @include sm() {
           width: 60%;
           overflow-x: scroll;
+          -webkit-overflow-scrolling: touch;
         }
       }
     }
