fix the font-weight of the privacy policy button

--- a/src/css/privacy_policy.module.scss
+++ b/src/css/privacy_policy.module.scss
@@ -61,6 +61,8 @@ $location-bg-color:#F1EEE6;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 400;
+    font-family: 'Poppins', 'Lato', 'Yeseva One', 'Noto Sans JP', sans-serif, cursive !important;
 
     Button{
       width: 30%;
