--- a/src/css/contact_form.module.scss
+++ b/src/css/contact_form.module.scss
@@ -209,11 +209,37 @@ a {
     height: 10rem;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: flex-start;
 
     ::placeholder {
       color: $contact-input-color;
+    }
+
+    .hint_container {
+      display: none;
+      position: absolute;
+      padding: .5rem 0;
+      left: 2rem;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+    }
+    .hint_img {
+      width: 60%;
+    }
+    .hint_words {
+      color: white;
+      position: absolute;
+      @include sm() {
+        font-size: .7rem;
+      }
+      @include md() {
+        font-size: .7rem;
+      }
+      @include lg() {
+        font-size: .8rem;
+      }
     }
   }
 
@@ -254,10 +280,12 @@ a {
 
   label {
     font-size: 0.8rem;
+    text-align: left;
   }
 
   input[type=text], select {
     width: 100%;
+    padding: 1rem 0;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid gray;
@@ -280,8 +308,10 @@ a {
     background-color: transparent;
     font-size: 3rem;
     width: 100%;
-    // height: 4rem;
     color: $contact-input-after-fill-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     @include sm() {
       font-size: 2rem;
     }
