--- a/src/css/cursor.module.scss
+++ b/src/css/cursor.module.scss
@@ -30,7 +30,7 @@ body, html {
     display: none;
   }
   @include lg(){
-    display: unset;
+    display: none;
   }
 }
 
@@ -52,7 +52,7 @@ body, html {
     display: none;
   }
   @include lg(){
-    display: unset;
+    display: none;
   }
 }
 
